<resources>
    <string name="app_name">Near-friends</string>
    <string name="contacts_list">Contacts-list</string>
    <string name="contacts_map">Contacts-map</string>
    <string name="profile">Profile</string>
    <string name="sing_in">Sing In</string>
    <string name="sing_up">Sing Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="user_name">User name</string>
    <string name="phone">Phone number</string>
    <string name="sing_in_success">Logged!</string>
    <string name="sing_up_success">Registered user!</string>
    <string name="swipe_up">Slides {fa-arrow-up} to sing up</string>
    <string name="swipe_down">Slides {fa-arrow-down} to sing in</string>
    <string name="mandatory_field">Field mandatory</string>
    <string name="email_field_validation">Invalid email</string>
    <string name="log_out">Logout</string>
    <string name="go_to_map">Go to {fa-map-marker}</string>
    <string name="avatar">{fa-camera}</string>
    <string name="profile_icon">Profile {fa-user}</string>
    <string name="non_gps">You don\'t have activate GPS {fa-location-arrow} \n Please enable it in order to use Near-friends</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="refresh">Refresh contacts</string>
    <string name="ask_to_send_whatsapp">This contact is not a Near-Friends\'s user .\n Do you want to send a whatsapp asking him to join Near-Friends?</string>
    <string name="agree">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="choose_image">Choose an image</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
</resources>

